feat: replace ID generation with ULID for better performance
- Replace Math.random() approach with ULID library
- Improve ID generation speed from 10M to 28M ops/sec
- Add time-sortable IDs for better memory retrieval performance
- Update test regex pattern to match ULID format
- Add performance best practices to development guidelines

Time-sortable IDs provide better database indexing and query performance
for memory systems requiring chronological ordering.

--- a/package.json
+++ b/package.json
@@ -89,9 +89,10 @@
     "pg": ">=8.0.0"
   },
   "dependencies": {
-    "zod": "^3.22.0",
     "p-queue": "^8.0.0",
-    "tiktoken": "^1.0.0"
+    "tiktoken": "^1.0.0",
+    "ulid": "^3.0.1",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
