--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "pg": ">=8.0.0"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "p-queue": "^8.0.0",
     "tiktoken": "^1.0.0",
     "ulid": "^3.0.1",
