feat: add Docker development environment
- Add docker-compose.yml for PostgreSQL with pgvector
- Add test:docker script for automated testing in Docker
- Add development scripts for easy database management
- Add .env.example for configuration template
- Update README with Docker quick start guide
- Add npm scripts: dev:up, dev:down, dev:clean, dev:logs

Makes development setup instant with one command: npm run dev:up

--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
     "test:coverage": "vitest --run --coverage",
     "test:integration": "vitest --run tests/integration",
     "test:docker": "bash scripts/test-docker.sh",
+    "dev:up": "bash scripts/docker-dev.sh up",
+    "dev:down": "bash scripts/docker-dev.sh down",
+    "dev:clean": "bash scripts/docker-dev.sh clean",
+    "dev:logs": "bash scripts/docker-dev.sh logs",
     "lint": "eslint src tests",
     "lint:fix": "eslint src tests --fix",
     "type-check": "tsc --noEmit",
