fix: robust migration handling for Docker environments
- Use DO block to handle pgvector extension conflicts gracefully
- Add error handling for cleanup during initial setup
- Improve transaction handling in migration rollbacks
- Fix issues with pre-installed pgvector in Docker containers

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "test:coverage": "vitest --run --coverage",
     "test:integration": "vitest --run tests/integration",
     "test:docker": "bash scripts/test-docker.sh",
+    "test:docker:alt": "bash scripts/test-docker-alt.sh",
     "dev:up": "bash scripts/docker-dev.sh up",
     "dev:down": "bash scripts/docker-dev.sh down",
     "dev:clean": "bash scripts/docker-dev.sh clean",
