feat: update token multipliers and add best practice files
- Update token multipliers based on official API documentation
- Add MIT LICENSE file
- Add standard CODE_OF_CONDUCT.md
- Fix CONTRIBUTING.md with correct Node.js v22 requirements
- Add professional badges to README
- Simplify examples to JavaScript for broader accessibility
- Update Docker configuration for better development experience

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "declaration": true,
     "declarationMap": true,
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "./",
     "sourceMap": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -29,6 +29,6 @@
     "useDefineForClassFields": true,
     "types": ["node", "vitest/globals"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "examples/**/*"],
   "exclude": ["node_modules", "dist", "tests"]
 }
