docs: update README with verified benchmark performance data
- Update performance claims based on actual benchmark results
- Memory operations: ~9ms average (verified via benchmark script)
- Vector search: ~5ms average for semantic similarity
- Token counting: <1ms sub-millisecond performance
- Add benchmark script to verify performance claims
- Remove unverified performance claims
- Include detailed performance ranges and model loading notes

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "docs": "typedoc src/index.ts",
     "example": "npm run build && node examples/quick-start.js",
     "example:basic": "npm run build && node examples/basic-usage.js",
+    "benchmark": "npm run build && node scripts/benchmark.js",
     "start": "npm run example",
     "prepare": "husky",
     "prepublishOnly": "npm run clean && npm run build && npm test && npm run lint",
